--- a/index.html
+++ b/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="it" class="scroll-smooth">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mauro.exe | Digital Creator</title>
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div id="root"></div>
-    
-    <script type="module" src="/src/index.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Mauro.exe | Digital Creator & Developer</title>
+
+  <!-- SEO Meta Tags -->
+  <meta name="description"
+    content="Portfolio ufficiale di Mauro. Digital Creator e sviluppatore specializzato in soluzioni web moderne, bot e automazione. Scopri i miei progetti." />
+  <meta name="keywords"
+    content="Mauro, Digital Creator, Web Developer, Portfolio, React, TypeScript, Automazione, Bot, AI" />
+  <meta name="author" content="Mauro" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.mauroceccarelli.it/" />
+  <meta property="og:title" content="Mauro.exe | Digital Creator & Developer" />
+  <meta property="og:description"
+    content="Portfolio ufficiale di Mauro. Digital Creator e sviluppatore specializzato in soluzioni web moderne, bot e automazione." />
+  <meta property="og:image" content="https://www.mauroceccarelli.it/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://www.mauroceccarelli.it/" />
+  <meta property="twitter:title" content="Mauro.exe | Digital Creator & Developer" />
+  <meta property="twitter:description"
+    content="Portfolio ufficiale di Mauro. Digital Creator e sviluppatore specializzato in soluzioni web moderne, bot e automazione." />
+  <meta property="twitter:image" content="https://www.mauroceccarelli.it/logo.png" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://www.mauroceccarelli.it/" />
+
+  <!-- Google Search Console Verification (Sostituisci il content con il tuo codice) -->
+  <meta name="google-site-verification" content="Sostituisci_con_codice_GSC" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Roboto:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+
+  <script type="module" src="/src/index.tsx"></script>
+</body>
+
 </html>
