feat: Aggiunti i componenti Hero e Services e aggiornati i meta tag di `index.html` per riflettere il nuovo focus aziendale.

--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mauro.exe | Digital Creator & Developer</title>
+  <title>Mauro.exe | Sviluppo Siti Web & Chatbot AI per il Business</title>
 
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Portfolio ufficiale di Mauro. Digital Creator e sviluppatore specializzato in soluzioni web moderne, bot e automazione. Scopri i miei progetti." />
+    content="Trasformo le tue idee in Business Digitale. Sviluppo siti web ad alte prestazioni, Chatbot AI e automazioni per aumentare le conversioni e il fatturato." />
   <meta name="keywords"
-    content="Mauro, Digital Creator, Web Developer, Portfolio, React, TypeScript, Automazione, Bot, AI" />
+    content="Sviluppo Web, Chatbot AI, Automazione Business, React Developer, Mauro Ceccarelli, Siti Web Professionali" />
   <meta name="author" content="Mauro" />
   <meta name="robots" content="index, follow" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mauroceccarelli.it/" />
-  <meta property="og:title" content="Mauro.exe | Digital Creator & Developer" />
+  <meta property="og:title" content="Mauro.exe | Sviluppo Siti Web & Chatbot AI" />
   <meta property="og:description"
-    content="Portfolio ufficiale di Mauro. Digital Creator e sviluppatore specializzato in soluzioni web moderne, bot e automazione." />
+    content="Trasformo le tue idee in Business Digitale. Sviluppo siti web ad alte prestazioni e automazioni per il tuo business." />
   <meta property="og:image" content="https://www.mauroceccarelli.it/logo.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://www.mauroceccarelli.it/" />
-  <meta property="twitter:title" content="Mauro.exe | Digital Creator & Developer" />
+  <meta property="twitter:title" content="Mauro.exe | Sviluppo Siti Web & Chatbot AI" />
   <meta property="twitter:description"
-    content="Portfolio ufficiale di Mauro. Digital Creator e sviluppatore specializzato in soluzioni web moderne, bot e automazione." />
+    content="Trasformo le tue idee in Business Digitale. Sviluppo siti web ad alte prestazioni e automazioni per il tuo business." />
   <meta property="twitter:image" content="https://www.mauroceccarelli.it/logo.png" />
 
   <!-- Canonical -->
