feat: Implementato il componente Hero, aggiornati i meta tag SEO e aggiunti dati strutturati in `index.html`, e creato `robots.txt` con configurazioni AI-friendly.

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Trasformo le tue idee in Business Digitale. Sviluppo siti web ad alte prestazioni, Chatbot AI e automazioni per aumentare le conversioni e il fatturato." />
+    content="Aiuto aziende e professionisti a scalare con Siti Web veloci e Chatbot AI intelligenti. Soluzioni su misura per automatizzare il business e aumentare le conversioni." />
   <meta name="keywords"
-    content="Sviluppo Web, Chatbot AI, Automazione Business, React Developer, Mauro Ceccarelli, Siti Web Professionali" />
-  <meta name="author" content="Mauro" />
-  <meta name="robots" content="index, follow" />
+    content="Sviluppo Web IA, Chatbot Aziendali, Automazione Business, React Developer Italia, Mauro Ceccarelli, Siti Web Veloci" />
+  <meta name="author" content="Mauro Ceccarelli" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.mauroceccarelli.it/" />
   <meta property="og:title" content="Mauro.exe | Sviluppo Siti Web & Chatbot AI" />
   <meta property="og:description"
-    content="Trasformo le tue idee in Business Digitale. Sviluppo siti web ad alte prestazioni e automazioni per il tuo business." />
+    content="Aiuto aziende e professionisti a scalare con Siti Web veloci e Chatbot AI intelligenti. Soluzioni su misura per automatizzare il business." />
   <meta property="og:image" content="https://www.mauroceccarelli.it/logo.png" />
 
   <!-- Twitter -->
@@ -38,6 +38,44 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Roboto:wght@300;400;500;700&display=swap"
     rel="stylesheet">
+
+  <!-- JSON-LD Structured Data (AI Passport) -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Person",
+          "@id": "https://www.mauroceccarelli.it/#person",
+          "name": "Mauro Ceccarelli",
+          "jobTitle": "Sviluppatore Web & IA",
+          "url": "https://www.mauroceccarelli.it",
+          "image": "https://www.mauroceccarelli.it/logo.png",
+          "sameAs": [
+            "https://www.linkedin.com/in/mauro-ceccarelli-282255296"
+          ],
+          "description": "Sviluppatore Full Stack specializzato in Siti Web ad alte prestazioni e Integrazione Intelligenza Artificiale per il business."
+        },
+        {
+          "@type": "ProfessionalService",
+          "@id": "https://www.mauroceccarelli.it/#service",
+          "name": "Mauro.exe - Soluzioni Digitali",
+          "url": "https://www.mauroceccarelli.it",
+          "logo": "https://www.mauroceccarelli.it/logo.png",
+          "image": "https://www.mauroceccarelli.it/logo.png",
+          "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "IT"
+          },
+          "priceRange": "$$",
+          "description": "Servizi di Sviluppo Web, Chatbot AI e Automazione Processi Aziendali.",
+          "founder": {
+            "@id": "https://www.mauroceccarelli.it/#person"
+          }
+        }
+      ]
+    }
+  </script>
 </head>
 
 <body>
